@@ -762,6 +762,13 @@ public class JavaModelGeneratorJava2Impl implements JavaModelGenerator {
         method.addBodyLine("return criteria;"); //$NON-NLS-1$
         topLevelClass.addMethod(method);
 
+        method = new Method();
+        method.addComment(table);
+        method.setVisibility(JavaVisibility.PUBLIC);
+        method.setName("clear"); //$NON-NLS-1$
+        method.addBodyLine("oredCriteria.clear();"); //$NON-NLS-1$
+        topLevelClass.addMethod(method);
+
         // now generate the inner class that holds the AND conditions
         topLevelClass.addInnerClass(getCriteriaInnerClass(topLevelClass,
                 introspectedTable));
